# TheAIgentsCompany-MCP

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.dxt.md  README.md  build-dxt.mjs  bundle.mcpb  cloudflared.example.yml  docker-run.sh  manifest.json  package-lock.json  package.json  projects.py  pyproject.toml  release.mjs  requirements.txt  run_sse.py  server.json  server.py  skills.py  supabase-setup.mjs  sync.mjs  theaigentscompany.README.txt  theaigentscompany.dxt  theaigentscompany.mcp.json  theaigentscompany.mcpb  tsconfig.json  tsup.config.ts
messages-board/: README.md  index.html
server/: index.js
src/: bin.ts  config.ts  prompts.ts  resources.ts  server.ts  supabase.ts  tools.ts
src/theaigents_tracker/: __init__.py  __main__.py  config.py  models.py  projects.py  server.py  skills.py
src/theaigentscompany_mcp/: __init__.py  __main__.py  log.py  projects.py  server.py  skills.py
tests/: conftest.py  test_config.py  test_projects.py  test_server.py  test_skills.py
